# docs/openapi.yaml
@@ -88,6 +88,59 @@ paths:
         '500':
           description: Internal server error
 
+  /users/{id}:
+    get:
+      summary: Get user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User fetched successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        '404':
+          description: User not found
+
+    put:
+      summary: Update user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserRequest'
+      responses:
+        '200':
+          description: User updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+
+    delete:
+      summary: Delete user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: User deleted successfully
+
 components:
   schemas:
     RankingsResponse:
@@ -141,12 +194,24 @@ components:
           type: string
           example: "me@example.com"
 
+    UpdateUserRequest:
+      type: object
+      required:
+        - username
+        - email
+      properties:
+        username:
+          type: string
+        email:
+          type: string
+          format: email
+
     UserResponse:
       type: object
       properties:
         id:
           type: string
-          example: "a3f1e55b-39f2-47c6-b33b-9e8bdc0a4e7e"
         username:
           type: string
-          example: "Alice"
+        email:
+          type: string
